# dq_agent

./: .gitignore  A0_SPEC.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  build_backend.py  dq.yaml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
benchmarks/: ped_compare.json  ped_compare.md  raha_compare.json  raha_compare.md
benchmarks/ped_clean/: summary.csv  summary.jsonl  summary.md
benchmarks/ped_dirty/: summary.csv  summary.jsonl  summary.md
benchmarks/raha_clean/: summary.csv  summary.md
benchmarks/raha_dirty/: summary.csv  summary.md
benchmarks/raha_noise_union/: compare.json  compare.md  summary_base.csv  summary_union.csv  summary_union.jsonl
docs/: publishing.md
dq_agent/: __init__.py  checkpoint.py  checkpoint_schema.py  cli.py  config.py  contract.py  errors.py  guardrails.py  loader.py  run_record.py  run_record_schema.py  runner.py  shadow.py  trace.py
dq_agent/anomalies/: __init__.py  base.py  detectors.py
dq_agent/demo/: generate_demo_data.py
dq_agent/explain/: __init__.py  explainer.py  (+1 more)
examples/: orders.csv  report.json  report.md
scripts/: agg_bench.py  bench_ped.sh  bench_raha.sh  bench_raha_noise_union.sh  eval_adult.sh  eval_dirty_clean.py  probe_fd_union.py  probe_string_noise_union.py  run_ped_and_save.sh  run_raha_and_save.sh  run_real_benchmarks_and_update_readme.sh  smoke_failure.sh  smoke_replay.sh  update_readme_benchmarks.py
tests/: test_anomalies.py  test_cli_demo.py  test_cli_replay.py  test_config_load.py  test_contract_missing_column.py  test_dq_demo_markdown.py  test_failure_contract.py  test_guardrails.py  test_idempotency.py  test_resume_checkpoint.py  test_rules.py  test_schema_validate.py  test_shadow.py  test_trace.py
(+9 files in other folders)
