[project]
name = "dq-agent"
version = "0.1.0"
description = "Data quality CLI demo with deterministic checks, anomaly detection, and replayable artifacts"
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pandas",
  "pyarrow",
  "pydantic",
  "pyyaml",
  "typer",
]

[project.urls]
Homepage = "https://github.com/Tylor-Tian/dq_agent"
Issues = "https://github.com/Tylor-Tian/dq_agent/issues"

[project.scripts]
dq = "dq_agent.cli:app"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "build_backend"
backend-path = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["dq_agent*"]

[tool.setuptools.package-data]
dq_agent = ["resources/*.yml"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
